// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFinalCancelOrderPayload() should return final cancel order payload 1`] = `
Immutable.Map {
  "reason": "customer",
  "email": true,
  "refund": Immutable.Map {
    "currency": "USD",
    "shipping": Immutable.Map {
      "amount": "0.00",
    },
    "notify": false,
    "refund_line_items": Immutable.List [
      Immutable.Map {
        "line_item_id": 4193100136471,
        "restock_type": "cancel",
        "quantity": 1,
        "location_id": 123,
      },
    ],
    "transactions": Immutable.List [
      Immutable.Map {
        "order_id": 1894175539223,
        "kind": "refund",
        "gateway": "manual",
        "parent_id": 2521452118039,
        "amount": "1.00",
        "currency": "USD",
        "maximum_refundable": "1.20",
      },
    ],
  },
}
`;

exports[`getLineItemQuantity() should return adjusted quantity because there is a refund 1`] = `0`;

exports[`getLineItemQuantity() should return original quantity because there is no refund 1`] = `1`;

exports[`getRefundableShippingAmount() should return adjusted amount because there is a refund 1`] = `7`;

exports[`getRefundableShippingAmount() should return original amount because there is no refund 1`] = `12`;

exports[`initCancelOrderLineItems() should return line items used to render the cancel order modal 1`] = `
Immutable.List [
  Immutable.Map {
    "price": "1.00",
    "quantity": 1,
    "product_id": 8345093387,
    "variant_id": 31128766316567,
    "title": "Acidulous candy",
    "id": 4193100136471,
    "total_discount": "0.00",
    "sku": "0987654321-1",
    "variant_title": "Red / A",
  },
  Immutable.Map {
    "price": "1.00",
    "quantity": 4,
    "product_id": 8345093387,
    "variant_id": 31128766349335,
    "title": "Acidulous candy",
    "id": 4193100169239,
    "total_discount": "0.00",
    "sku": "0987654321-2",
    "variant_title": "Red / B",
  },
]
`;

exports[`initCancelOrderPayload() should return cancel order payload 1`] = `
Immutable.Map {
  "reason": "customer",
  "email": true,
  "refund": Immutable.Map {
    "currency": "USD",
    "restock": true,
    "notify": false,
    "refund_line_items": Immutable.List [
      Immutable.Map {
        "line_item_id": 4193100136471,
        "restock_type": "cancel",
        "quantity": 1,
      },
      Immutable.Map {
        "line_item_id": 4193100169239,
        "restock_type": "cancel",
        "quantity": 4,
      },
    ],
    "shipping": Immutable.Map {
      "amount": "0.00",
    },
  },
}
`;
